--- a/ArtWars/artWars.Web/Web.config
+++ b/ArtWars/artWars.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   
   <connectionStrings>
-	<add name="artWars" connectionString="Data Source=localhost\MSSQLSERVER01;    Initial Catalog=artWars;    Integrated Security=True;    MultipleActiveResultSets=True;    App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="artWars" connectionString="data source=SKDN\MSSQLSERVER01;Initial Catalog=artWars;Integrated Security=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings>
