--- a/ArtWars/artWars.BusinessLogic/artWars.BusinessLogic.csproj
+++ b/ArtWars/artWars.BusinessLogic/artWars.BusinessLogic.csproj
@@ -55,10 +55,22 @@
     <Compile Include="BusinessLogic.cs" />
     <Compile Include="Core\AdminApi.cs" />
     <Compile Include="Core\UserApi.cs" />
+    <Compile Include="DBModel\Seed\UDBTableInitializer.cs" />
     <Compile Include="DBModel\SessionContext.cs" />
     <Compile Include="DBModel\UserContext.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\ISession.cs" />
+    <Compile Include="Migrations\201804151156066_InitialCreate.cs" />
+    <Compile Include="Migrations\201804151156066_InitialCreate.Designer.cs">
+      <DependentUpon>201804151156066_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804151253466_InitialMigration.cs" />
+    <Compile Include="Migrations\201804151253466_InitialMigration.Designer.cs">
+      <DependentUpon>201804151253466_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="SessionBL.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -72,7 +84,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DBModel\Seed\" />
+    <EmbeddedResource Include="Migrations\201804151156066_InitialCreate.resx">
+      <DependentUpon>201804151156066_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804151253466_InitialMigration.resx">
+      <DependentUpon>201804151253466_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
